# LMS

./: .env.exemple  .flake8  .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  serializers.py  views.py
lms/migrations/: 0001_initial.py
user/: models.py  serializers.py  views.py
user/fixtures/: payments.json
user/migrations/: 0001_initial.py  0002_payment.py
